force-app/main/default/objects/Tournament__c/fields/Tournament_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Tournament_End_Date__c</fullName>
    <label>Tournament End Date</label>
    <type>Date</type>
</CustomField>