force-app/main/default/objects/Tournament__c/fields/Tournament_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Start_Date__c</fullName>
    <label>Tournament Start Date</label>
    <type>Date</type>
</CustomField>