force-app/main/default/objects/Tournament__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year</label>
    <referenceTo>Year__c</referenceTo>
    <relationshipLabel>Tournaments</relationshipLabel>
    <relationshipName>Tournaments</relationshipName>
    <type>Lookup</type>
</CustomField>